[package]
name = "stub-it-out"
version = "0.1.0"
edition = "2021"
authors = ["Jacob Morgan <jacob.morgan.dev@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
toml_edit =  { version = "0.14.3", features = ["serde", "easy", "perf"] }